chapter03-deploy-scale-services/3.2-healthcheck-readiness/k8s/01-application/02-register-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: register-api
  namespace: healthcheck
  labels:
    name: register-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      name: register-api
  template:
    metadata:
      labels:
        name: register-api
    spec:
      containers:
      - name: register-api
        image: 3dsinteractive/automation-technology:prd-1.0.20210117185519
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 1
        ports:
        - name: api8080
          containerPort: 8080
        resources:
          requests:
            memory: 300Mi
            cpu: 100m
          limits:
            memory: 1Gi
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: register-api
  namespace: healthcheck
  labels:
    name: register-api
spec:
  selector:
    name: register-api
  ports:
  - name: "api8080"
    port: 8080
    targetPort: 8080
    protocol: TCP
